tests/bad-ctor-01/out.txt
error: pattern does not an arrow type: d
  ┌─ inp.sml:4:5
  │
4 │     A _ => 1
  │     ^^^

typechecking failed
